ros2_ws/log/build_2021-05-18_20-07-23/robot_description/stderr.log
  File "/home/mpt/Desktop/assgn2/ros2_ws/install/robot_description/lib/python3.8/site-packages/robot_description/user_input.py", line 81
    elif self.listener is not:
                             ^
SyntaxError: invalid syntax

